Add Storage Manager code and related types

--- a/shard.yml
+++ b/shard.yml
@@ -17,6 +17,9 @@ dependencies:
   verhoeff:
     github: spider-gazelle/verhoeff
 
+  tlv:
+    github: spider-gazelle/tlv
+
 crystal: 1.9.2
 
 license: MIT
